--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,32 @@
 {
-    "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Debug with GDB",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/Pufferfish",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "build",
-            "miDebuggerPath": "wsl.exe",
-            "miDebuggerArgs": "-e gdb"
-        }
-    ]
+
+    {
+        "name": "(gdb) Launch",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/build-windows/Pufferfish.exe",
+        "cwd": "${workspaceFolder}/build-windows",
+        "args": [],
+        "stopAtEntry": false,
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "gdb",
+        "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
+        "setupCommands": [
+            {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            },
+            {
+                "description": "Set Disassembly Flavor to Intel",
+                "text": "-gdb-set disassembly-flavor intel",
+                "ignoreFailures": true
+            }
+        ],
+        
+    }
+    ],
+    "preLaunchTask": "cmake-build"  // Optional: auto-build before debug
 }
