--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,24 +2,34 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "cmake-build",
             "type": "shell",
             "command": "cmake",
             "args": [
                 "--build",
-                "${workspaceFolder}/build"
+                "build-windows"
             ],
-            "options": {
-                "shell": {
-                    "executable": "wsl.exe",
-                    "args": ["-e", "bash", "-ic"]
-                }
-            },
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "problemMatcher": ["$gcc"]
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            },
+            "problemMatcher": "$gcc"
+        },
+        {
+            "label": "cmake-configure-windows",
+            "type": "shell",
+            "command": "cmake",
+            "args": [
+                "-G",
+                "MinGW Makefiles",
+                "-B",
+                "build-windows"
+            ],
+            "problemMatcher": []
         }
     ]
 }
